--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: lootopia-api
   datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     url: jdbc:postgresql://localhost:5432/project_db
     username: postgres
     password: 1234
@@ -12,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: email
-    password: pws
+    username: ${SPRING_MAIL_USERNAME}
+    password: ${SPRING_MAIL_PASSWORD}
     properties:
       mail:
         smtp:
